--- a/package.json
+++ b/package.json
@@ -9,9 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "next": "13.0.1",
+    "@rainbow-me/rainbowkit": "^0.7.4",
+    "axios": "^1.1.3",
+    "ethers": "^5.7.2",
+    "jotai": "^1.9.1",
+    "next": "12.3.1",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "wagmi": "^0.7.10"
   },
   "devDependencies": {
     "@types/node": "18.11.9",
