--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@headlessui/react": "^1.7.3",
     "@rainbow-me/rainbowkit": "^0.7.4",
     "axios": "^1.1.3",
+    "daisyui": "^2.38.0",
     "ethers": "^5.7.2",
     "jotai": "^1.9.1",
     "next": "12.3.1",
@@ -19,6 +21,7 @@
     "wagmi": "^0.7.10"
   },
   "devDependencies": {
+    "@types/es6-promise": "^3.3.0",
     "@types/node": "18.11.9",
     "@types/react": "18.0.24",
     "@types/react-dom": "18.0.8",
