--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "daisyui": "^2.38.0",
     "ethers": "^5.7.2",
     "jotai": "^1.9.1",
-    "next": "12.3.1",
+    "next": "^13.0.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "wagmi": "^0.7.10"
