--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "next": "^13.0.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-if": "^4.1.4",
     "wagmi": "^0.7.10"
   },
   "devDependencies": {
