--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-if": "^4.1.4",
+    "react-spinners": "^0.13.6",
     "wagmi": "^0.7.10"
   },
   "devDependencies": {
