--- a/package.json
+++ b/package.json
@@ -9,11 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@apollo/client": "^3.7.1",
     "@headlessui/react": "^1.7.3",
     "@rainbow-me/rainbowkit": "^0.7.4",
     "axios": "^1.1.3",
     "daisyui": "^2.38.0",
     "ethers": "^5.7.2",
+    "graphql": "^16.6.0",
     "jotai": "^1.9.1",
     "next": "^13.0.1",
     "react": "18.2.0",
