--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@headlessui/react": "^1.7.3",
     "@rainbow-me/rainbowkit": "^0.7.4",
     "axios": "^1.1.3",
+    "crypto.js": "^3.0.0",
     "daisyui": "^2.38.0",
     "ethers": "^5.7.2",
     "graphql": "^16.6.0",
