--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@headlessui/react": "^1.7.3",
     "@rainbow-me/rainbowkit": "^0.7.4",
     "axios": "^1.1.3",
+    "crypto-js": "^4.1.1",
     "crypto.js": "^3.0.0",
     "daisyui": "^2.38.0",
     "ethers": "^5.7.2",
@@ -27,6 +28,7 @@
     "wagmi": "^0.7.10"
   },
   "devDependencies": {
+    "@types/crypto-js": "^4.1.1",
     "@types/es6-promise": "^3.3.0",
     "@types/node": "18.11.9",
     "@types/react": "18.0.24",
